# appdotbuild-agent

./: .cursorrules  .cursorrules.python  .cursorrules.typescript  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVIN.md  PROJECT_GUIDELINES.md  README.md  analyze_errors.py  anthropic_cache.json  bot_tester.py  pyproject.toml  requirements-dev.txt  test_new_ontology.py  test_ollama_integration.py
.cursor/: mcp.json
agent/: .dockerignore  .env.example  .env.local  ApplicationTest.ipynb  ApplicationTest3.ipynb  ApplicationTest4.ipynb  Builder.ipynb  DockerSandoxTest.ipynb  Dockerfile  Dockerfile.application  Dockerfile.typespec  HandlerTestScratchpad.ipynb  Integration.ipynb  Interpolation.ipynb  IterationTest.ipynb  PolicyTest.ipynb  README.md  Scratchpad.ipynb  TestServer.ipynb  application.py  architecture.puml  benchmark.py  bulk_creator.py  commands.py  common.py  conftest.py  dag_compiler.py  debug.py  docker-compose.yml  log.py  main.py  prepare_containers.sh  pyproject.toml  requirements.txt  search.py  server.py  services.py  statemachine.py  test_machine.py  test_update.py  (+1 more)
agent/analysis/: app.py  nicegui_trace_viewer.py  trace_loader.py  utils.py
agent/api/: base_agent_session.py  config.py  docker_utils.py  fsm_api.py  fsm_tools.py  mcp_server.py  snapshot_utils.py
agent/api/agent_server/: _test_api.py  agent_api.tsp  agent_api_client.py  agent_client.py  async_agent_session.py  async_server.py  counter_app.patch  empty_diff_impl.py  interface.py  models.py  run.py  server.py  template_diff_impl.py  test_api.py  test_api_server.py  test_async_agent.py  test_async_server.py  test_direct.py  test_log.py
agent/compiler/: .env.template  Test.ipynb  app.py  core.py  main.py  settings.py
agent/core/: actors.py  application.py  dagger_utils.py  datatypes.py  feature_flags.py  handler.tpl  interpolator.py  notification_utils.py  postgres_utils.py  statemachine.py  workspace.py
agent/core/compilers/: __init__.py  drizzle.py  typespec.py
agent/core/stages/: __init__.py  drizzle.py  expansion.py  handlers.py  processors.py  router.py  tsp_compiler.py  typescript.py  typespec.py
agent/diff/: diff_utils.py
agent/evals/: test_drizzle_generation.py  test_handlers_generation.py  test_typespec_generation.py
agent/evals/dataset.min/: car_app.ts  car_app.tsp  car_db.ts  car_poem_drizzle_schema.ts  car_poem_typescript_schema.ts  car_poems2_drizzle_schema.ts  car_poems2_typescript_schema.ts  const_app.ts  const_app.tsp  greetings_drizzle_schema.ts  greetings_typescript_schema.ts  gym_app.ts  gym_bot_typespec_schema.tsp  translate_db.ts
agent/fsm_core/: common.py  drizzle.py  handler_tests.py  handlers.py  helpers.py  llm_common.py  run_sequence.py  typescript.py  typespec.py
agent/fullstack/: README.md  actors.py  application.py  backend_fsm.py  base_node.py  build_oci.py  demo_run_actors_only.py  frontend_fsm.py  main.py  playbooks.py  pyproject.toml  run_cli.py  server.py  shared_fsm.py  start_server.py  statemachine.py  test_actor_serialization.py  test_machine.py  trpc_agent.py  workspace.py
agent/fullstack/models/: anthropic.py  anthropic_bedrock.py  anthropic_client.py  cached.py  common.py  langfuse_wrapper.py  utils.py
agent/fullstack/tests/: test_actor_serialization.py  test_cached_llm.py
agent/integrations/: analyze_spreadsheet.py  dbrx.py
agent/laravel_agent/: actors.py  agent_session.py  application.py  playbooks.py  sync_template.py  utils.py
agent/laravel_agent/template/: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  composer.json  docker-compose.yml  package-lock.json  package.json  phpstan.neon.dist  phpunit.xml  pint.json
agent/llm/: __init__.py  alloy.py  anthropic_bedrock.py  anthropic_client.py  cached.py  client.py  common.py  gemini.py  langfuse_wrapper.py  llm_cache.json  llm_generators.py  lmstudio_client.py  models_config.py  ollama_client.py  openai_client.py  openrouter_client.py  providers.py  telemetry.py  utils.py
agent/nicegui_agent/: actors.py  agent_session.py  application.py  playbooks.py
agent/nicegui_agent/template/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  sgconfig.yml
agent/policies/: app_testcases.py  common.py  drizzle.py  handler_tests.py  handlers.py  refine.py  router.py  typescript.py  typespec.py
agent/sam_agent/: actors.py  agent_session.py  application.py  playbooks.py  playwright.py
agent/sam_agent/template/: Dockerfile  Makefile  docker-compose.yml  package.json  supervisord.conf
agent/stash_bot/: ApplicationTest.ipynb  ApplicationTest4.ipynb  Dockerfile.application  HandlerTestScratchpad.ipynb  __init__.py  application.py  bulk_creator.py  capabilities.py  dag_compiler.py  iteration.py  main.py  prepare_containers.sh  run_statemachine.py  server.py  services.py  statemachine.py  tracing_client.py
agent/stash_bot/core/: feature_flags.py  interpolator.py
agent/stash_bot/evals/: _test_drizzle_generation.py  _test_handlers_generation.py  _test_typespec_generation.py
agent/stash_bot/fsm_core/: common.py  drizzle.py  handler_tests.py  llm_common.py
agent/stash_bot/scripts/: generate_integration.ts
agent/stash_bot/tests/: _test_agent_server_api.py  _test_custom_tools_generation.py  _test_end2end.py  _test_interpolator.py  _test_llm_clients.py  _test_smoke_no_docker.py  _test_typespec.py
agent/templates/: docker-compose.yml
agent/tests/: test_actor_serialization.py  test_agent_client_continue.py  test_agent_server_api.py  test_application_diff.py  test_application_edit_cycle.py  test_cached_llm.py  test_custom_tools_generation.py  test_dbrx.py  test_diff_generation.py  test_e2e.py  test_end2end.py  test_fsm_edit_flow.py  test_fsm_tools.py  test_interpolator.py  test_laravel_migration_validation.py  test_llm_clients.py  test_machine.py  test_server.py  test_smoke.py  test_smoke_no_docker.py  test_typespec.py  test_utils.py
agent/trpc_agent/: actors.py  agent_session.py  application.py  diff_edit_actor.py  notification_utils.py  playbooks.py  playwright.py  silly.py  todo_app_snapshot.json  utils.py
(+202 files in other folders)
