[project]
name = "appdotbuild-server"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fullstack-agent"]

[tool.uv.sources]
fullstack-agent = { workspace = true }

[tool.uv.workspace]
members = ["agent/"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
]

line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# FixMe: how to pull dev dependencies from the children workspace?
[dependency-groups]
dev = [
    "ruff>=0.11.5",
 "pdbpp>=0.10.3",
 "pytest>=8.3.5",
 "pytest-xdist>=3.6.1",
]
