[project]
name = "fullstack-agent"
version = "0.1.0"
description = "Opinionated Tanstack codegen agent."
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.49.0",
    "anyio>=4.9.0",
    "dagger-io>=0.17.1",
    "fastapi>=0.115.12",
    "fire>=0.7.0",
    "google-genai>=1.7.0",
    "jinja2>=3.1.6",
    "sentry-sdk>=2.25.1",
    "uvicorn==0.34.0",
    "watchtower>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "llm", "fsm_core", "compiler", "trpc_agent"]

[project.scripts]
server = "api.agent_server.async_server:main"

[dependency-groups]
dev = [
    "coloredlogs>=15.0.1",
    "docker>=7.1.0",
 "pdbpp>=0.10.3",
 "pytest>=8.3.5",
 "ruff>=0.11.5",
]
google = ["google-genai>=1.7.0"]
openai = ["openai>=1.68.2"]
