[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.10.6",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.34.0",
]


[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 2022
reload = false
